--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>CTi Winnipeg</title>
+  <title>Tap &amp; Die Bar / Moto Shop</title>
 
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,35 +16,15 @@
 </head>
 <body>
   <div class="wrapper">
-    <header>
-      <h1>CTi Winnipeg</h1>
-      <p>Moving life in Canada forward.</p>
-      <p class="view"><a href="https://github.com/CTi-Winnipeg">View our GitHub Profile</a></p>
-    </header>
-    <section>
-      <p>In the blog...</p>
-      <ul>
-        {% for post in site.posts %}
-          <li>
-            <a href="{{ post.url }}">{{ post.title }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    </section>
-    <footer>
-      <p><small>Canadian Tire Innovations, Winnipeg</small></p>
-    </footer>
+    Tap &amp; Die Bar / Moto Shop
   </div>
-  <script src="javascripts/scale.fix.js"></script>
-  <script type="text/javascript">
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-  </script>
-  <script type="text/javascript">
-    try {
-      var pageTracker = _gat._getTracker("UA-58632825-1");
-      pageTracker._trackPageview();
-    } catch(err) {}
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-60588713-4', 'auto');
+    ga('send', 'pageview');
   </script>
 
 </body>
