--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <![endif]-->
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper" style="text-align: center;">
     Tap &amp; Die Bar / Moto Shop
   </div>
   <script>
