--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 <body>
   <div class="wrapper" style="text-align: center;">
     <p>
-      <img src="img/logo.png" alt="Tap &amp; Die" width="300">
+      <img id="logo" src="img/logo.png" alt="Tap &amp; Die">
     </p>
     <p class="uppercase">
-      Bar / Moto Shop
+      <strong>Bar / Moto Shop</strong>
+    </p>
+    <p class="uppercase">
+      Coming to Winnipeg, Manitoba
     </p>
   </div>
   <script>
